Aba quiz com o css atualizado

--- a/Desbravadores-site/public/dashboard.html
+++ b/Desbravadores-site/public/dashboard.html
@@ -57,13 +57,14 @@
 </body>
 </html>
 <script>
-    let idade = 16;
+    let idade = 11;
     if (idade == 10){
         idCompanheiro.style.opacity = "0.3";
         idPesquisador.style.opacity = "0.3";
         idPioneiro.style.opacity = "0.3";
         idExcursionista.style.opacity = "0.3";
         idGuia.style.opacity = "0.3";
+        idAmigo.style.cursor = "pointer";
 
         function amigo(){
             location.href = 'amigo.html' 
@@ -74,6 +75,7 @@
         idPioneiro.style.opacity = "0.3";
         idExcursionista.style.opacity = "0.3";
         idGuia.style.opacity = "0.3";
+        idCompanheiro.style.cursor = "pointer";
 
         function companheiro(){
             location.href = 'amigo.html' 
@@ -84,6 +86,7 @@
         idPioneiro.style.opacity = "0.3";
         idExcursionista.style.opacity = "0.3";
         idGuia.style.opacity = "0.3";
+        idPesquisador.style.cursor = "pointer";
 
         function pesquisador(){
             location.href = 'pesquisador.html'
@@ -94,6 +97,7 @@
         idCompanheiro.style.opacity = "0.3";
         idExcursionista.style.opacity = "0.3";
         idGuia.style.opacity = "0.3";
+        idPioneiro.style.cursor = "pointer";
 
         function pioneiro(){
             location.href = 'pioneiro.html'
@@ -104,6 +108,7 @@
         idCompanheiro.style.opacity = "0.3";
         idPioneiro.style.opacity = "0.3";
         idGuia.style.opacity = "0.3";
+        idExcursionista.style.cursor = "pointer";
 
         function excursionista(){
             location.href = 'excursionista.html'   
@@ -114,6 +119,7 @@
         idCompanheiro.style.opacity = "0.3";
         idPioneiro.style.opacity = "0.3";
         idExcursionista.style.opacity = "0.3";
+        idGuia.style.cursor = "pointer";
         
         function guia(){
             location.href = 'guia.html'
@@ -137,7 +143,13 @@
     function guia(){
             location.href = 'guia.html'
     }
-    
+    idAmigo.style.cursor = "pointer";
+    idCompanheiro.style.cursor = "pointer";
+    idPesquisador.style.cursor = "pointer";
+    idPioneiro.style.cursor = "pointer";
+    idExcursionista.style.cursor = "pointer";
+    idGuia.style.cursor = "pointer";
+
     }
     // function cards(){
     //     if (idade == 10){
