Coloquei a rota do questionario, controller e o model

--- a/Desbravadores-site/public/dashboard.html
+++ b/Desbravadores-site/public/dashboard.html
@@ -67,7 +67,7 @@
         idAmigo.style.cursor = "pointer";
 
         function amigo(){
-            location.href = 'amigo.html' 
+            location.href = '/classes/amigo.html' 
     }
     } else if (idade == 11){
         idAmigo.style.opacity = "0.3";
@@ -78,7 +78,7 @@
         idCompanheiro.style.cursor = "pointer";
 
         function companheiro(){
-            location.href = 'amigo.html' 
+            location.href = '/classes/companheiro.html' 
     }
     } else if (idade == 12){
         idAmigo.style.opacity = "0.3";
