dados do quiz para dar insert no BD feito

--- a/Desbravadores-site/public/dashboard.html
+++ b/Desbravadores-site/public/dashboard.html
@@ -25,6 +25,7 @@
                         <a href="">Conta</a>
                     </div>
                 </li>
+                <a href="./dashboard/cards.html">dash</a>
             </ul>
             <div id="cards">
                 <div class="Amigo" onclick="amigo()" id="idAmigo">
@@ -56,7 +57,9 @@
     </div>
 </body>
 </html>
+<script src="js/sessao.js"></script>
 <script>
+;
     let idade = 11;
     if (idade == 10){
         idCompanheiro.style.opacity = "0.3";
