--- a/Desbravadores-site/public/login.html
+++ b/Desbravadores-site/public/login.html
@@ -94,8 +94,8 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.QUESTIONARIO = json.questionario;
-                    sessionStorage.QUESTOES = json.questoes;
+
+                    // sessionStorage.QUESTOES = json.questoes;
                     
                     // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
 
