--- a/Desbravadores-site/public/login.html
+++ b/Desbravadores-site/public/login.html
@@ -93,8 +93,8 @@
                     console.log(JSON.stringify(json));
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
-
+                    sessionStorage.ID_USUARIO = json.idusuario;
+                    console.log(json.idusuairo)
                     // sessionStorage.QUESTOES = json.questoes;
                     
                     // sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
