foi arrumado o erro da pagina conta

--- a/Desbravadores-site/public/sobre.html
+++ b/Desbravadores-site/public/sobre.html
@@ -12,7 +12,7 @@
         <div class="conteiner">
             <div class="conteiner-conteudo">
                     <ul class="nav-bar">
-                        <img src="assets/icon/logo-a-melhor-aventura.png" alt="logo-desbravadores">
+                        <img src="assets/icon/Logo-desbravadores.webp" alt="logo-desbravadores">
                         <li>
                             <a href="index.html">Início</a>
                         </li>
@@ -59,7 +59,7 @@
             </div>
             <div class="footer">
                 <div class="conteiner">
-                    <img src="assets/icon/logo-a-melhor-aventura.png" alt="">
+                    <img src="assets/icon/Logo-desbravadores.webp" alt="">
                 </div>
                 <div class="box-nav">
                     <ul class="box-nav-ul">
