--- a/Desbravadores-site/public/conta.html
+++ b/Desbravadores-site/public/conta.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html> 
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-br"> 
 
 <head>
     <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AquaTech | Dashboards</title>
+    <title>Conta | Aventura</title>
 
     
-    <link rel="stylesheet" href="./../css/dashboards.css">
     <link rel="stylesheet" href="styles/conta.css" />
     <script src="../js/sessao.js"></script>
     <script src="./../js/alerta.js"></script>
