--- a/Desbravadores-site/public/conta.html
+++ b/Desbravadores-site/public/conta.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/conta.css" />
     <script src="../js/sessao.js"></script>
     <script src="./../js/alerta.js"></script>
+    <script src="js/dadosQuiz.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -22,7 +23,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!--FONT AWESOME-->
-    <script src="https://kit.fontawesome.com/9f7414eb10.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/9f7414eb10.js" crossorigin="anonymous"></script> -->
 </head>
 
 <!-- <body onload=" atualizarFeed()"> -->
@@ -65,28 +66,42 @@
 </html>
 
 <script>
-    let id = [];
-    let usuario = [];
-    let questionario = [];
+    // let id = [];
+    // let usuario = [];
+    // let questionario = [];
+    Questionario;
+
     b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+    var pontuacao = sessionStorage.RESULTADO;
 
     let proximaAtualizacao;
-    function obterDadosGrafico(resultado) {
+function obterDadosGrafico(resultado) {
 
 alterarTitulo(idQuestionario)
 
 if (proximaAtualizacao != undefined) {
     clearTimeout(proximaAtualizacao);
 }
-
-fetch(`/medidas/resultado`, { cache: 'no-store' }).then(function (response) {
+// fetch(`http://localhost:3333/medidas/resultado?idusuario=${sessionStorage.getItem('ID_USUARIO')}`)
+//   .then(response => response.json())
+//   .then(data => {
+//     plotarGrafico(data);
+//   })
+//   .catch(err => {
+//     console.log(err);
+//   });
+fetch(`http://localhost:3333/medidas/resultado`, {
+    method: 'GET',
+    headers: {
+        "Content-Type": "application/json"
+    },   
+}).then(function (response) {
     if (response.ok) {
         response.json().then(function (resposta) {
             console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
-            resposta.reverse();
+            console.log(resposta)
 
             plotarGrafico(resposta, resultado);
-
         });
     } else {
         console.error('Nenhum dado encontrado ou erro na API');
@@ -95,44 +110,62 @@ fetch(`/medidas/resultado`, { cache: 'no-store' }).then(function (response) {
     .catch(function (error) {
         console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
     });
+    
+// fetch(`/medidas/resultado`, { cache: 'no-store' }).then(function (response) {
+//     if (response.ok) {
+//         response.json().then(function (resposta) {
+//             console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+//             resposta.reverse();
+//             console.log(resposta)
+
+//             plotarGrafico(resposta, resultado);
+//         });
+//     } else {
+//         console.error('Nenhum dado encontrado ou erro na API');
+//     }
+// })
+//     .catch(function (error) {
+//         console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+//     });
 }
-function plotarGrafico(resposta, resultado) {
+function plotarGrafico(resultado) {
 
 console.log('iniciando plotagem do gráfico...');
 
 // Criando estrutura para plotar gráfico - labels
-let labels = [];
+const idusuairo = sessionStorage.getItem('ID_USUARIO');
+const dados = []
+
 
 // Criando estrutura para plotar gráfico - dados
-let dados = {
-    labels: labels,
-    datasets: [{
-        label: 'Certas',
-        data: [],
-        fill: false,
-        borderColor: 'rgb(75, 192, 192)',
-        tension: 0.1
+const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'pie',
+    data: {
+      labels: ['Certas', 'Erradas'],
+      datasets: [{
+        label: 'Questionario 1',
+        data: dados,
+        borderWidth: 1,
+        backgroundColor: ['green', 'red']
+      }
+    ]
     },
-    {
-        label: 'Erradas',
-        data: [],
-        fill: false,
-        borderColor: 'rgb(199, 52, 52)',
-        tension: 0.1
-    }]
-};
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
 
 console.log('----------------------------------------------')
 console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
 console.log(resposta)
 
 // Inserindo valores recebidos em estrutura para plotar o gráfico
-for (i = 0; i < resposta.length; i++) {
-    var registro = resposta[i];
-    labels.push(registro.momento_grafico);
-    dados.datasets[0].data.push(registro.Errada);
-    dados.datasets[1].data.push(registro.Certa);
-}
 
 console.log('----------------------------------------------')
 console.log('O gráfico será plotado com os respectivos valores:')
@@ -143,112 +176,14 @@ console.log(dados.datasets)
 console.log('----------------------------------------------')
 
 // Criando estrutura para plotar gráfico - config
-const config = {
-    type: 'pizza',
-    data: dados,
-};
+
 
 // Adicionando gráfico criado em div na tela
-let myChart = new Chart(
-    document.getElementById(`myChartCanvas${idQuestionario}`),
-    config
-);
+
 
 // setTimeout(() => atualizarGrafico(idQuestionario, dados, myChart), 2000);
 }
 
-    // window.onload = exibirAquariosDoUsuario();
-
-    // function exibirAquariosDoUsuario() {
-    //     var aquarios = JSON.parse(sessionStorage.AQUARIOS);
-    //     aquarios.forEach(item => {
-    //         document.getElementById("btnAquario").innerHTML += `
-    //         <button class="btn-chart" onclick="exibirAquario(${item.id})" id="btnAquario${item.id}">${item.descricao}</button>
-    //         `
-
-    //         document.getElementById("graficos").innerHTML += `
-    //             <div id="grafico${item.id}" class="display-none">
-    //                 <h3 class="tituloGraficos">
-    //                     <span id="tituloAquario${item.id}">${item.descricao}</span>
-    //                 </h3>
-    //                 <div class="graph">
-    //                     <canvas id="myChartCanvas${item.id}"></canvas>
-    //                 </div>
-    //                 <div class="label-captura">
-    //                     <p id="avisoCaptura${item.id}" style="color: white"></p>
-    //                 </div>
-    //             </div>
-    //         `
-
-    //         obterDadosGrafico(item.id)
-    //     });
-
-        // if (aquarios.length > 0) {
-        //     exibirAquario(aquarios[0].id)
-        // }
-    // }
-
-    // function alterarTitulo(idAquario) {
-    //     var tituloAquario = document.getElementById(`tituloAquario${idAquario}`)
-    //     var descricao = JSON.parse(sessionStorage.AQUARIOS).find(item => item.id == idAquario).descricao;
-    //     tituloAquario.innerHTML = "Últimas medidas de Temperatura e Umidade do <span style='color: #e6005a'>" + descricao + "</span>"
-    // }
-
-    // function exibirAquario(idQuestionario) {
-    //     let todosOsGraficos = JSON.parse(sessionStorage.AQUARIOS);
-
-    //     for (i = 0; i < todosOsGraficos.length; i++) {
-    //         // exibindo - ou não - o gráfico
-    //         if (todosOsGraficos[i].id != idQuestionario) {
-    //             let elementoAtual = document.getElementById(`grafico${todosOsGraficos[i].id}`)
-    //             if (elementoAtual.classList.contains("display-block")) {
-    //                 elementoAtual.classList.remove("display-block")
-    //             }
-    //             elementoAtual.classList.add("display-none")
-
-    //             // alterando estilo do botão
-    //             let btnAtual = document.getElementById(`btnAquario${todosOsGraficos[i].id}`)
-    //             if (btnAtual.classList.contains("btn-pink")) {
-    //                 btnAtual.classList.remove("btn-pink")
-    //             }
-    //             btnAtual.classList.add("btn-white")
-    //         }
-    //     }
-
-    //     // exibindo - ou não - o gráfico
-    //     let graficoExibir = document.getElementById(`grafico${idQuestionario}`)
-    //     graficoExibir.classList.remove("display-none")
-    //     graficoExibir.classList.add("display-block")
-
-    //     // alterando estilo do botão
-    //     let btnExibir = document.getElementById(`btnAquario${idQuestionario}`)
-    //     btnExibir.classList.remove("btn-white")
-    //     btnExibir.classList.add("btn-pink")
-    // }
-
-    // O gráfico é construído com três funções:
-    // 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
-    // 2. plotarGrafico -> Monta o gráfico com os dados trazidos e exibe em tela
-    // 3. atualizarGrafico -> Atualiza o gráfico, trazendo novamente dados do Banco
-
-    // Esta função *obterDadosGrafico* busca os últimos dados inseridos em tabela de medidas.
-    // para, quando carregar o gráfico da primeira vez, já trazer com vários dados.
-    // A função *obterDadosGrafico* também invoca a função *plotarGrafico*
-
-    //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-    //     Para ajustar o "select", ajuste o comando sql em src/models
-
-
-    // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
-    // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
-    // A função *plotarGrafico* também invoca a função *atualizarGrafico*
-
-
-    // Esta função *atualizarGrafico* atualiza o gráfico que foi renderizado na página,
-    // buscando a última medida inserida em tabela contendo as capturas, 
-
-    //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-    //     Para ajustar o "select", ajuste o comando sql em src/models
     // function atualizarGrafico(idQuestoes, dados, myChart) {
 
 
